--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
 
 
 <body>
-	<div class="container home">
 
-		<!-- Here is the Menu -->
-		<div class="top-bar">
-			<div class="menu">
-				<div class="menu-button">MENU</div>
-			</div>
+
+	<!-- Here is the Menu -->
+	<div class="top-bar">
+		<div class="menu">
+			<div class="menu-button">MENU</div>
 		</div>
-		
+	</div>
+
+	<div class="container">
 		<!-- Here is the Header -->
 		<header>
+			<div>
 			<h1>Use My Tools</h1>
-			<p>Share your tools without worry. </p>
+			</div>
+			<div>
+				<p>Share your tools without worry. </p>
+			</div>
 		</header>
 
 		<!-- Body Content -->
@@ -43,7 +48,9 @@
 				mlkshk four dollar toast plaid edison bulb.</p>
 		</div>
 	</div>
-
+	<footer>
+		copyright 2019
+	</footer>
 </body>
 
 </html>
