Added features section. Added How It works section. Added CTA section. Added footer.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- Here is the Header -->
 		<header>
 			<div>
-			<h1>Use My Tools</h1>
+				<h1>Use My Tools</h1>
 			</div>
 			<div>
 				<p>Share your tools without worry. </p>
@@ -33,7 +33,7 @@
 		</header>
 
 		<!-- Body Content -->
-		<div class="home-body">
+		<div class="features">
 			<h2>Features</h2>
 			<p>Lorem ipsum dolor amet meh pitchfork viral echo park flannel, pop-up lyft dreamcatcher. Pug snackwave poke,
 				neutra bitters schlitz paleo sartorial XOXO austin hammock. Yr skateboard brooklyn, migas fixie godard chia
@@ -46,6 +46,53 @@
 				farm-to-table small batch kickstarter quinoa man braid. Church-key jianbing iceland gochujang bespoke live-edge
 				enamel pin semiotics. Organic whatever franzen asymmetrical tofu iPhone cliche swag lumbersexual quinoa venmo
 				mlkshk four dollar toast plaid edison bulb.</p>
+		</div>
+
+		<div class="how-it-works">
+			<h2> How it Works</h2>
+			<div class="how-body">
+				<div class="how-section">
+					<h3>This</h3>
+					<p>Authentic aesthetic cold-pressed master cleanse scenester tilde tumblr yr unicorn ramps deep v jean shorts
+						edison
+						bulb. Butcher viral pickled typewriter food truck man braid live-edge subway tile waistcoat cardigan flannel
+						twee.
+						IPhone godard hot chicken lo-fi poke tote bag. Master cleanse fingerstache 8-bit biodiesel literally forage twee
+						skateboard craft beer meh humblebrag flannel cornhole. Blue bottle bespoke DIY listicle everyday carry narwhal
+						authentic direct trade iceland squid knausgaard yr post-ironic.</p>
+				</div>
+				<div class="how-section">
+					<h3>That</h3>
+					<p>Mustache humblebrag retro, gluten-free tofu 8-bit offal paleo meh viral adaptogen deep v cray thundercats.
+						Chambray fam readymade live-edge ugh hot chicken tattooed hammock retro bicycle rights. Vape stumptown irony
+						heirloom you probably haven't heard of them single-origin coffee. Cliche wayfarers cardigan, literally distillery
+						intelligentsia chia sartorial viral kitsch ennui bitters. Banjo gentrify echo park kogi selvage art party
+						keffiyeh
+						listicle salvia shoreditch pickled fingerstache put a bird on it.</p>
+				</div>
+				<div class="how-section">
+					<h3>The Other</h3>
+					<p>Selvage next level tattooed lo-fi vegan hexagon. You probably haven't heard of them bicycle rights put a bird
+						on
+						it bespoke, knausgaard live-edge cornhole actually. Before they sold out knausgaard vinyl readymade cornhole
+						wayfarers jean shorts tilde skateboard cronut mlkshk tousled single-origin coffee. Marfa irony gentrify
+						williamsburg hashtag, vice pug banjo drinking vinegar tilde. Cliche vaporware unicorn activated charcoal, copper
+						mug umami slow-carb ugh celiac intelligentsia echo park offal lumbersexual palo santo. Letterpress bicycle rights
+						kombucha +1 hell of four loko. Activated charcoal austin tattooed readymade vaporware, jean shorts cornhole
+						godard cliche artisan venmo.</p>
+				</div>
+			</div>
+		</div>
+		<div class="cta">
+			<div class="cta-left">
+				<p>Raclette selfies whatever 3 wolf moon letterpress kale chips farm-to-table poke helvetica. Fam man bun fashion
+					axe letterpress pop-up wayfarers portland gentrify, authentic meggings cold-pressed kale chips woke shabby chic
+					twee. Stumptown thundercats cliche freegan copper mug chicharrones synth cloud bread snackwave you probably
+					haven't heard of them vinyl cardigan.</p>
+			</div>
+			<div class="cta-right">
+				<div class="cta-button">CLICK</div>
+			</div>
 		</div>
 	</div>
 	<footer>
