Added header image. Started to add more styling to the page.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 			<div>
 				<p>Share your tools without worry. </p>
 			</div>
+		<a href="#features" class="more">Learn More</a>
 		</header>
 
 		<!-- Body Content -->
-		<div class="features">
+		<div class="features" id="features">
 			<h2>Features</h2>
 			<p>Lorem ipsum dolor amet meh pitchfork viral echo park flannel, pop-up lyft dreamcatcher. Pug snackwave poke,
 				neutra bitters schlitz paleo sartorial XOXO austin hammock. Yr skateboard brooklyn, migas fixie godard chia
@@ -41,11 +42,6 @@
 				adaptogen locavore trust fund humblebrag. Letterpress af cray ethical, pok pok butcher swag etsy. Letterpress squid
 				fashion axe PBR&B occupy umami. Before they sold out authentic copper mug occupy craft beer tacos, raw denim blue
 				bottle hexagon crucifix cray venmo gochujang franzen.</p>
-			<p>Woke VHS twee farm-to-table, gentrify typewriter wayfarers 90's keffiyeh hoodie. Readymade shabby chic wayfarers
-				whatever gochujang sustainable four dollar toast mlkshk bushwick prism lo-fi quinoa. Banh mi man bun neutra
-				farm-to-table small batch kickstarter quinoa man braid. Church-key jianbing iceland gochujang bespoke live-edge
-				enamel pin semiotics. Organic whatever franzen asymmetrical tofu iPhone cliche swag lumbersexual quinoa venmo
-				mlkshk four dollar toast plaid edison bulb.</p>
 		</div>
 
 		<div class="how-it-works">
