Updated color scheme. Made the site tablet responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Use My Tools</title>
 	<link rel="stylesheet" href="./CSS/index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Permanent+Marker" rel="stylesheet">
 </head>
 
 
@@ -30,7 +31,8 @@
 			<div>
 				<p>Share your tools without worry. </p>
 			</div>
-		<a href="#features" class="more">Learn More</a>
+			<button>Sign Up</button>
+			<a href="#features" class="more">Learn More</a>
 		</header>
 
 		<!-- Body Content -->
@@ -50,11 +52,9 @@
 				<div class="how-section">
 					<h3>This</h3>
 					<p>Authentic aesthetic cold-pressed master cleanse scenester tilde tumblr yr unicorn ramps deep v jean shorts
-						edison
-						bulb. Butcher viral pickled typewriter food truck man braid live-edge subway tile waistcoat cardigan flannel
-						twee.
-						IPhone godard hot chicken lo-fi poke tote bag. Master cleanse fingerstache 8-bit biodiesel literally forage twee
-						skateboard craft beer meh humblebrag flannel cornhole. Blue bottle bespoke DIY listicle everyday carry narwhal
+						edison bulb. Butcher viral pickled typewriter food truck man braid live-edge subway tile waistcoat cardigan
+						flannel twee. IPhone godard hot chicken lo-fi poke tote bag. Master cleanse fingerstache 8-bit biodiesel literally forage
+						twee skateboard craft beer meh humblebrag flannel cornhole. Blue bottle bespoke DIY listicle everyday carry narwhal
 						authentic direct trade iceland squid knausgaard yr post-ironic.</p>
 				</div>
 				<div class="how-section">
@@ -87,7 +87,7 @@
 					haven't heard of them vinyl cardigan.</p>
 			</div>
 			<div class="cta-right">
-				<div class="cta-button">CLICK</div>
+				<div class="cta-button">Sign Up</div>
 			</div>
 		</div>
 	</div>
