Updated the How It Works section to give it responsive boxes

--- a/index.html
+++ b/index.html
@@ -50,32 +50,60 @@
 			<h2> How it Works</h2>
 			<div class="how-body">
 				<div class="how-section">
-					<h3>This</h3>
-					<p>Authentic aesthetic cold-pressed master cleanse scenester tilde tumblr yr unicorn ramps deep v jean shorts
-						edison bulb. Butcher viral pickled typewriter food truck man braid live-edge subway tile waistcoat cardigan
-						flannel twee. IPhone godard hot chicken lo-fi poke tote bag. Master cleanse fingerstache 8-bit biodiesel literally forage
-						twee skateboard craft beer meh humblebrag flannel cornhole. Blue bottle bespoke DIY listicle everyday carry narwhal
-						authentic direct trade iceland squid knausgaard yr post-ironic.</p>
+					<img src="./images/how_map.png" alt="map">
+					<div>
+						<h3>Find Your Tools</h3>
+						<p>Find tools close to you, or set a max distance that your tools can go.</p>
+					</div>
 				</div>
 				<div class="how-section">
-					<h3>That</h3>
-					<p>Mustache humblebrag retro, gluten-free tofu 8-bit offal paleo meh viral adaptogen deep v cray thundercats.
-						Chambray fam readymade live-edge ugh hot chicken tattooed hammock retro bicycle rights. Vape stumptown irony
-						heirloom you probably haven't heard of them single-origin coffee. Cliche wayfarers cardigan, literally distillery
-						intelligentsia chia sartorial viral kitsch ennui bitters. Banjo gentrify echo park kogi selvage art party
-						keffiyeh
-						listicle salvia shoreditch pickled fingerstache put a bird on it.</p>
+					<img src="./images/how_build.png" alt="">
+					<div>
+						<h3>Tools When You need</h3>
+						<p>In a pinch? Find the tools you need quickly and easily.</p>
+					</div>
 				</div>
 				<div class="how-section">
-					<h3>The Other</h3>
-					<p>Selvage next level tattooed lo-fi vegan hexagon. You probably haven't heard of them bicycle rights put a bird
-						on
-						it bespoke, knausgaard live-edge cornhole actually. Before they sold out knausgaard vinyl readymade cornhole
-						wayfarers jean shorts tilde skateboard cronut mlkshk tousled single-origin coffee. Marfa irony gentrify
-						williamsburg hashtag, vice pug banjo drinking vinegar tilde. Cliche vaporware unicorn activated charcoal, copper
-						mug umami slow-carb ugh celiac intelligentsia echo park offal lumbersexual palo santo. Letterpress bicycle rights
-						kombucha +1 hell of four loko. Activated charcoal austin tattooed readymade vaporware, jean shorts cornhole
-						godard cliche artisan venmo.</p>
+					<img src="./images/how_box.png" alt="box">
+					<div>
+						<h3>Wonder No More</h3>
+						<p>No longer do you have to wonder where your tools or, or who you loaned them to.</p>
+					</div>
+				</div>
+				<div class="how-section">
+					<img src="./images/how_house.png" alt="">
+					<div>
+						<h3>Meet Neighbors</h3>
+						<p>Join the tool share community and make friends with neighbors.</p>
+					</div>
+				</div>
+				<div class="how-section">
+					<img src="./images/how_post.png" alt="">
+					<div>
+						<h3>Post Tools Easily</h3>
+						<p>We make it easy for you to list what tools you want to loan out.</p>
+					</div>
+				</div>
+				<div class="how-section">
+						<img src="./images/how_map.png" alt="">
+						<div>
+							<h3>Map Tool Locations</h3>
+							<p>See where your tools are.</p>
+						</div>
+					</div>
+				<div class="how-section">
+					<img src="./images/how_search.png" alt="">
+					<div>
+						<h3>Find Who Has your Tools</h3>
+						<p>Easily find who has the tools you want, or the tools you loaned.</p>
+					</div>
+				</div>
+				<div class="how-section">
+					<img src="./images/how_paid.png" alt="">
+					<div>
+						<h3>Get Paid</h3>
+						<p>Loan out your tools and get paid!</p>
+					</div>
 				</div>
 			</div>
 		</div>
