--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Use My Tools</title>
 	<link rel="stylesheet" href="./CSS/index.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1", viewport-fit=cover>
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Permanent+Marker" rel="stylesheet">
 </head>
 
