Updating the menu style on mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div>
 				<p>Share your tools without worry. </p>
 			</div>
-			<a href="https://mytools2019-ehvj06hiu.now.sh/register"><button>Sign Up</button></a> 
+			<button><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a> </button>
 			<a href="#features" class="more">Learn More</a>
 		</header>
 
@@ -129,7 +129,7 @@
 				<p>We already have <span id="get-api"></span> tools ready to be borrowed. Join the tool share revolution!</p>
 			</div>
 			<div class="cta-right">
-				<a href="https://mytools2019-ehvj06hiu.now.sh/register"><button>Sign Up</button></a>
+				<button><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a></button>
 			</div>
 		</div>
 	</div>
