--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="./CSS/index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Permanent+Marker" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+	 crossorigin="anonymous">
 	<script src="./components/TopBar/TopBar.js" async></script>
 	<script src="./components/Menu/Menu.js" async></script>
 	<script src="./js/index.js" async></script>
@@ -32,10 +33,7 @@
 					<li><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a></li>
 					<li><a href="https://mytools2019-ehvj06hiu.now.sh/login">Log In</a></li>
 				</ul>
-				<!-- <a class="dropdown-link" href="https://lambdaschool.com/" target="_blank">Lambda</a>
-				<a class="dropdown-link" href="https://www.google.com/" target="_blank">Google</a>
-				<a class="dropdown-link" href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a> -->
-		  </div>	
+			</div>
 		</div>
 	</div>
 
@@ -55,12 +53,9 @@
 		<!-- Body Content -->
 		<div class="features" id="features">
 			<h2>Features</h2>
-			<p>Lorem ipsum dolor amet meh pitchfork viral echo park flannel, pop-up lyft dreamcatcher. Pug snackwave poke,
-				neutra bitters schlitz paleo sartorial XOXO austin hammock. Yr skateboard brooklyn, migas fixie godard chia
-				gastropub tofu sustainable raclette ethical. Lomo fashion axe edison bulb offal sriracha unicorn green juice
-				adaptogen locavore trust fund humblebrag. Letterpress af cray ethical, pok pok butcher swag etsy. Letterpress squid
-				fashion axe PBR&B occupy umami. Before they sold out authentic copper mug occupy craft beer tacos, raw denim blue
-				bottle hexagon crucifix cray venmo gochujang franzen.</p>
+			<p>Use My Tools allows you to lend you our tools and make some cash while doing it. All you need to do is enter the
+				tools you want to lend out, fill in a couple details like the lending fee and what is the furthest distance you
+				want your tool going. We will take care of the rest.</p>
 		</div>
 
 		<div class="how-it-works">
@@ -102,12 +97,12 @@
 					</div>
 				</div>
 				<div class="how-section">
-						<img src="./images/how_map.png" alt="">
-						<div>
-							<h3>Map Tool Locations</h3>
-							<p>See where your tools are.</p>
-						</div>
+					<img src="./images/how_map.png" alt="">
+					<div>
+						<h3>Map Tool Locations</h3>
+						<p>See where your tools are.</p>
 					</div>
+				</div>
 				<div class="how-section">
 					<img src="./images/how_search.png" alt="">
 					<div>
@@ -126,7 +121,7 @@
 		</div>
 		<div class="cta">
 			<div class="cta-left">
-				<p>We already have <span id="get-api"></span> tools ready to be borrowed. Join the tool share revolution!</p>
+				<p>We already have <span id="get-api"></span> tools ready to be borrowed. <br> Your neighbors are looking forward to working with you. Come join the tool share revolution!</p>
 			</div>
 			<div class="cta-right">
 				<button><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a></button>
