Added scrollTo. Fixed typos

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 		<!-- Body Content -->
 		<div class="features" id="features">
 			<h2>Features</h2>
-			<p>Use My Tools allows you to lend you our tools and make some cash while doing it. All you need to do is enter the
-				tools you want to lend out, fill in a couple details like the lending fee and what is the furthest distance you
-				want your tool going. We will take care of the rest.</p>
+			<p>Use My Tools allows you to lend your tools and make some cash while doing it. All you need to do is enter the
+				tools you want to lend out, and fill in a couple of details like the lending fee and the furthest distance you
+				want your tool to go. We will take care of the rest.</p>
 		</div>
 
 		<div class="how-it-works">
@@ -86,7 +86,7 @@
 					<img src="./images/how_box.png" alt="box">
 					<div>
 						<h3>Wonder No More</h3>
-						<p>No longer do you have to wonder where your tools or, or who you loaned them to.</p>
+						<p>No longer do you have to wonder where your tools are, or to whom you loaned them.</p>
 					</div>
 				</div>
 				<div class="how-section">
