Backend URL updated

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<img src="./images/close.svg" alt="close" class="close-btn">
 				<ul>
 					<li><i class="fas fa-cog"></i><a href="index.html">Home</a></li>
-					<li><i class="fas fa-cog"></i><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a></li>
-					<li><i class="fas fa-cog"></i><a href="https://mytools2019-ehvj06hiu.now.sh/login">Log In</a></li>
+					<li><i class="fas fa-cog"></i><a href="https://mytools2019-7fu4k4gtf.now.sh/register">Sign Up</a></li>
+					<li><i class="fas fa-cog"></i><a href="https://mytools2019-7fu4k4gtf.now.sh/login">Log In</a></li>
 				</ul>
 			</div>
 		</div>
@@ -50,7 +50,7 @@
 			<div>
 				<p>Share your tools without worry. </p>
 			</div>
-			<button><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a> </button>
+			<button><a href="https://mytools2019-7fu4k4gtf.now.sh/register">Sign Up</a> </button>
 			<a href="#features" class="more">Learn More</a>
 		</header>
 
@@ -130,7 +130,7 @@
 					<br> Come join the tool share revolution!</p>
 			</div>
 			<div class="cta-right">
-				<button><a href="https://mytools2019-ehvj06hiu.now.sh/register">Sign Up</a></button>
+				<button><a href="https://mytools2019-7fu4k4gtf.now.sh/register">Sign Up</a></button>
 			</div>
 		</div>
 	</div>
